--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,11 @@
           chmod 600 ~/.ssh/known_hosts
 
 
-
-
       - name: Copiar archivos al servidor
         run: |
-          rsync -avz --delete --exclude '.ssh/' -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" ./ "${{ secrets.USER_SERVER }}@${{ secrets.IP_PUBLICA }}:/home/ubuntu/proyecto
+          rsync -avz --delete --exclude '.ssh/' -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" ./ ${{ secrets.USER_SERVER }}@${{ secrets.IP_PUBLICA }}:/home/ubuntu/proyecto
+
+
 
       - name: ejecutar comandos en el servidor levantar docker 
         run: | 
