--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,15 @@
           chmod 600 ~/.ssh/known_hosts
 
 
+      - name: Crear carpeta de proyecto en el servidor
+        run: | 
+            ssh -i /.ssh/id_rsa -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.USER_SERVER }}@${{ secrets.IP_PUBLICA }} << 'EOF'
+            mkdir -p /home/ubuntu/proyecto
+            EOF
+
       - name: Copiar archivos al servidor
         run: |
-          scp -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -r ./ ${{ secrets.USER_SERVER }}@${{ secrets.IP_PUBLICA }}:/home/ubuntu/proyecto
-
+          rsync -avz --delete --exclude '.ssh/' -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" ./ ${{ secrets.USER_SERVER }}@${{ secrets.IP_PUBLICA }}:/home/ubuntu/proyecto
 
       - name: ejecutar comandos en el servidor levantar docker 
         run: | 
