prueba de ejecucion

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@
     push:
   #    branches:
   #      - master
-    pull_request:
+    #pull_request:
       branches:
         - main
   jobs:
@@ -30,7 +30,7 @@
 
       - name: Copiar archivos al servidor
         run: |
-            rsync -avz --delete --exclude '.ssh/' -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" ./ ${{ secrets.USER_SERVER }}@${{ secrets.IP_PUBLICA }}:/home/ubuntu/proyecto
+              rsync -avz --delete --exclude '.ssh/' -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" ./ ${{ secrets.USER_SERVER }}@${{ secrets.IP_PUBLICA }}:/home/ubuntu/proyecto
 
 
       - name: ejecutar comandos en el servidor levantar docker 
